--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2021"
 anyhow = "1.0.68"
 bytes = "1.3.0"
 clap = { version = "4.0.32", features = ["derive"] }
+futures = "0.3.31"
 hex = "0.4.3"
 rand = "0.9.2"
 regex = "1"
