--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "bittorrent-starter-rust"
+name = "torrentstream"
 version = "0.1.0"
 authors = ["Lakshamana <lakshamana@proton.me>"]
 edition = "2021"
